# OSMTools

./: .gitignore  CMakeLists.txt  CsvFieldConfDlg.cpp  CsvFieldConfDlg.h  Downloader.cpp  Downloader.h  GNUmakefile  README.md  RoadUtils.cpp  RoadUtils.h  Roads.cpp  Roads.h  Test.cpp  Test.h  TravelTool.cpp  TravelTool.h  dijkstra.cl  logo.xcf  oclDijkstraKernel.cpp  oclDijkstraKernel.h  sssp.cl  uiRoadDownload.cpp  uiRoadDownload.h  uiTravelDistances.cpp  uiTravelDistances.h
